@@ -62,3 +62,4 @@ docs/manual/source/ToolBox.rst
 docs/manual/source/XSecComputer.rst
 *~
 *.crash
+.http*
