@@ -231,13 +231,69 @@ class Database(object):
         """
         return self.txt_meta.pathname
 
+    def fetchFromScratch ( self, path, store, discard_zeroes ):
+        """ fetch database from scratch, together with
+            description. """
+        import requests
+        r = requests.get( path )
+        if r.status_code != 200:
+            logger.error ( "Error %d: could not fetch %s from server." % \
+                           ( r.status_code, path ) )
+            sys.exit()
+        ## its new so store the description
+        with open( store, "w" ) as f:
+            f.write ( r.text )
+        if not "url" in r.json().keys():
+            logger.error ( "cannot parse json file %s." % path )
+            sys.exit()
+        logger.debug ( "now fetch %s" % r.json()["url"] )
+        r2=requests.get ( r.json()["url"] )
+        logger.info ( "fetched %s" % r2.url ) 
+        filename= "./" + r2.url.split("/")[-1]
+        logger.debug ( "store as %s" % filename )
+        with open( filename, "wb" ) as f:
+            f.write ( r2.content )
+            f.close()
+        self.force_load = "pcl"
+        return ( "./", "./%s" % filename )
+
+
+    def fetchFromServer ( self, path, discard_zeroes ):
+        import requests, time, json
+        logger.debug ( "fetch from server: %s" % path )
+        store = "." + path.replace ( ":","_" ).replace( "/", "_" ).replace(".","_" )
+        if not os.path.isfile ( store ):
+            ## completely new! fetch the description and the db!
+            return self.fetchFromScratch ( path, store, discard_zeroes )
+        r = requests.get( path )
+        if r.status_code != 200:
+            logger.error ( "Error %d: could not fetch %s from server." % \
+                           ( r.status_code, path ) )
+            sys.exit()
+        jsn = json.load(open(store))
+        if r.json()["lastchanged"] > jsn["lastchanged"]:
+            ## has changed! redownload everything!
+            return self.fetchFromScratch ( path, store, discard_zeroes )
+        
+        filename= "./" + jsn["url"].split("/")[-1]
+        if not os.path.isfile ( filename ):
+            return self.fetchFromScratch ( path, store, discard_zeroes )
+        self.force_load = "pcl"
+        # next step: check the timestamps
+        return ( "./", filename )
 
     def checkPathName( self, path, discard_zeroes ):
         """
         checks the path name,
-        returns the base directory and the pickle file name
+        returns the base directory and the pickle file name.
+        If path starts with http or ftp, fetch the description file
+        and the database.
+        :returns: directory name, (full) pickle file name
         """
         logger.debug('Try to set the path for the database to: %s', path)
+        if path.startswith( ( "http://", "https://", "ftp://" ) ):
+            return self.fetchFromServer ( path, discard_zeroes )
+            
         tmp = os.path.realpath(path)
         if os.path.isfile ( tmp ):
             base = os.path.dirname ( tmp )
